--- a/GDJ92_Maven/src/main/resources/messages/message_en.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message_en.properties
@@ -2,3 +2,6 @@
 
 welcome.message=Hello
 user.info=Your ID is {0}, and your email is {1}
+
+member.password.check=password not match
+member.username.check=ID is duplicated
