검증 그룹, 회원 정보 수정

--- a/GDJ92_Maven/src/main/resources/messages/message_en.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message_en.properties
@@ -5,3 +5,5 @@ user.info=Your ID is {0}, and your email is {1}
 
 member.password.check=password not match
 member.username.check=ID is duplicated
+
+NotBlank=required
