--- a/GDJ92_Maven/src/main/resources/messages/message_ko.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message_ko.properties
@@ -5,3 +5,5 @@ user.info=당신의 ID는 {0} 이고, 당신의 이메일은 {1} 입니다
 
 member.password.check=비밀번호가 일치하지 않습니다
 member.username.check=아이디가 중복입니다
+
+NotBlank=필수입니다
