Member detail, update 수정

--- a/GDJ92_Maven/src/main/resources/messages/message_ko.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message_ko.properties
@@ -1,7 +1,7 @@
 # 한글(한국어)
 
 welcome.message=안녕하세요
-user.info=당신의 ID는 {0} 이고, 당신의 이메일은 {1} 입니다
+user.info=당신의 ID는 {0} 이고, <br>당신의 이메일은 {1} 입니다
 
 member.password.check=비밀번호가 일치하지 않습니다
 member.username.check=아이디가 중복입니다
